--- a/childs-play-android/AndroidManifest.xml
+++ b/childs-play-android/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="cloudymoose.childsplay"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-permission android:name="android.permission.INTERNET" /> 
 
     <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="17" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" android:debuggable="true">
         <activity
             android:name="cloudymoose.childsplay.MainActivity"
             android:label="@string/app_name"
