--- a/childs-play-android/AndroidManifest.xml
+++ b/childs-play-android/AndroidManifest.xml
@@ -6,9 +6,10 @@
     
     <uses-permission android:name="android.permission.INTERNET" /> 
 
-    <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="17" />
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="18" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" android:debuggable="true">
         <activity
